<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Filter Setting">
        <ListPreference
            android:defaultValue="@string/settings_sort_by_default"
            android:entries="@array/settings_sort_by_labels"
            android:entryValues="@array/settings_sort_by_values"
            android:key="@string/settings_sort_by_key"
            android:title="@string/settings_sort_by_label" />

        <EditTextPreference
            android:defaultValue="@string/settings_min_result_default"
            android:inputType="numberDecimal"
            android:key="@string/settings_min_result_key"
            android:selectAllOnFocus="true"
            android:title="@string/settings_min_result_label" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="Default Setting">

    </PreferenceCategory>

</PreferenceScreen>